[tool.poetry]
name = "fnaf_bobbleheads"
version = "0.1.0"
description = ""
authors = ["megahomyak <g.megahomyak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyQt6 = "^6.5.2"
librosa = "^0.10.1"
SoundCard = "^0.4.2"
soundfile = "^0.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
